<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:gravity="center"
    tools:context=".SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/whatsapp" />

        <EditText
            android:id="@+id/editTextSignEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:textColor="@color/black"
            android:hint="Email"
            android:textColorHint="@color/black"
            android:layout_marginTop="15dp"
            android:inputType="textEmailAddress"
            android:padding="15dp" />

        <EditText
            android:id="@+id/editTextSignNumberPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/password"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:inputType="numberPassword"
            android:padding="15dp" />

        <TextView
            android:id="@+id/btnsingup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/click_for_sign_up"
            android:textStyle="bold"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="18sp">

        </TextView>


        <Button
            android:id="@+id/signin"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/sign_in"
            android:padding="5dp"
            android:textColor="@color/black"
            android:background="@drawable/rounded_corner"
            android:textStyle="bold" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/googlebtn"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="4dp"
                android:drawableLeft="@drawable/_659939281579738432"
                android:padding="5dp"
                android:text="Google"
                android:background="@drawable/rounded_corner"
                android:textColor="@color/black"/>


            <Button
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/facebook"
                android:padding="5dp"
                android:text="FaceBook"
                android:textColor="@color/black"
                android:background="@drawable/rounded_corner"
                />

        </LinearLayout>
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="21sp"
            android:textStyle="bold"
            android:textColor="@color/purple_200"
            android:text="Sign Up With Phone" />


    </LinearLayout>

</LinearLayout>